# ssm-connect

./: .gitignore  ADDITIONAL_FIXES.md  Cargo.toml  FIXES.md  LICENSE  README.md  ROOT_CAUSE_FIX.md  TEST_CHECKLIST.md  VERIFICATION_GUIDE.md
src/: app.rs  error.rs  lib.rs  main.rs
src/aws/: credential_parser.rs  credentials.rs  ec2.rs  mod.rs  ssm.rs  types.rs
src/config/: mod.rs  settings.rs
src/events/: handler.rs  input.rs  mod.rs
src/ui/: mod.rs  render.rs
src/ui/screens/: credential_debug.rs  credential_input.rs  help.rs  instance_list.rs  loading.rs  mod.rs  port_forwards.rs  region_selection.rs  settings.rs
src/ui/widgets/: instance_table.rs  mod.rs  status_bar.rs
